<resources>
    <string name="app_name">message</string>
    <string name="splash_title">Messages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="message">Message</string>
    <string name="new_message">New Message</string>
    <string name="cancel">Cancel</string>
    <string name="to">To:</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">0918273645</string>
    <string name="detail">Detail</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="add_image">Add Image</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="chat_wallpaper">Chat Wallpaper</string>
    <string name="font">Font</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="feedback">Feedback</string>
    <string name="color">COLOR</string>
    <string name="wallpaper">WALLPAPER</string>
    <string name="messages">Messages</string>
    <string name="how_much_do_you_love_app">How much do you love app?</string>
    <string name="rate_now">Rate Now</string>
    <string name="message_sent_successfully">Your sms has successfully sent!</string>
    <string name="message_sent_failed">Your sms has failed…</string>
    <string name="select_picture">Select Picture</string>
    <string name="you_have_not_entered_content_yet">Please enter text message and phone number</string>
    <string name="rated_stars">You have rated %d stars</string>
    <string name="not_entered_username_yet">"You have not entered username yet"</string>
    <string name="invalid_phone_number">"Invalid phone number"</string>
    <string name="need_permissions_to_run_app">"We need permissions to run the app"</string>
    <string name="permission_required">Permission Required</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="phone_number_already_exist">Phone number already exist, please enter another phone number</string>
    <string name="invalid_image">Invalid image! Please select another one</string>
    <string name="show_more">Show more</string>
    <string name="error">Error</string>
</resources>