<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:background="@drawable/ripple_effect"
            android:id="@+id/iv_back"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:padding="13dp"
            android:src="@drawable/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:gravity="center"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:background="@drawable/ripple_effect"
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/blue_1"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/default_avatar_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <TextView
            android:maxLines="2"
            android:paddingHorizontal="56dp"
            android:ellipsize="end"
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sf_pro_text_medium"
            android:gravity="center"
            tool:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

        <TextView
            android:maxLines="2"
            android:paddingHorizontal="56dp"
            android:ellipsize="end"
            android:id="@+id/tv_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:gravity="center"
            tool:text="@string/phone_number"
            android:textColor="#7D7D7D"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_detail_contact"
            android:gravity="center"
            android:paddingTop="8dp"
            android:fontFamily="@font/sf_pro_text_medium"
            android:text="@string/message"
            android:textSize="10sp"
            android:textColor="@color/blue_1"
            app:drawableTopCompat="@drawable/message_icon"
            app:layout_constraintEnd_toStartOf="@id/tv_contact"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_detail_contact"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/contacts"
            android:textSize="10sp"
            android:fontFamily="@font/sf_pro_text_medium"
            android:textColor="@color/blue_1"
            app:drawableTopCompat="@drawable/contact_blue_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_message"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>