<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/ripple_effect"
            android:padding="13dp"
            android:src="@drawable/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tittle"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:gravity="center"
            android:text="@string/chat_wallpaper"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/color"
            android:textColor="@color/gray"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tittle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chat_wallpaper_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_color" />

        <TextView
            android:id="@+id/tv_wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/wallpaper"
            android:textColor="@color/gray"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_chat_wallpaper_color" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chat_wallpaper_landscape"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_wallpaper"
            app:spanCount="2"
            tools:ignore="RtlSymmetry" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>